--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "@types/styled-components-react-native": "^5.2.5",
     "typescript": "^5.1.3"
   },
+  "overrides": {
+    "@types/react": "~18.0.14"
+  },
   "private": true
 }
